examples/quic/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    CONJECTURE
    INSTANTIATE
    MINIMIZING
    FRESH
    INVARIANT
    RELY
    IMPLEMENTATION
    DERIVED
    INIT
    ACTION
    IMPORT
    SPECIFICATION
    ISOLATE
    MODULE
    VAR
    ENTRY
    BEFORE
    OF
    AFTER
    PROGRESS
    PROPERTY
    INTERPRET
    CARET
    FUNCTION
    ENSURES
    REQUIRE
    SOME
    DECREASES
    LABEL
    ASSUME
    WITH
    LET
    MODIFIES
    REQUIRES
    DOTS
    AROUND
    NAMED
    IMPLEMENT
    INCLUDE
    UPDATE
    MAXIMIZING
    MIXORD
    TEMPORAL
    LCB
    DELEGATE
    MIXIN
    WHILE
    DEFINITION
    SET
    APPLY
    EXTRACT
    TRUSTED
    SCHEMA
    GHOST
    PARAMS
    STATE
    NATIVEQUOTE
    MATCH
    OBJECT
    THUNK
    ENSURE
    ATTRIBUTE
    USING
    TYPE
    DOTDOTDOT
    ASSERT
    EXPORT
    NULL
    PARAMETER
    AXIOM
    RCB
    PROOF
    SEMI
    VARIANT
    PRIVATE
    INDIV
    ASSIGN
    AUTOINSTANCE
    MACRO
    ALIAS
    RELATION
    IN
    LOCAL
    CONCEPT
    FROM
    STRUCT
    SCENARIO
    RETURNS
    DESTRUCTOR
    CALL

Grammar

Rule 0     S' -> fmla
Rule 1     atype -> SYMBOL
Rule 2     atype -> atype DOT SYMBOL
Rule 3     atype -> THIS
Rule 4     appelem -> SYMBOL
Rule 5     appelem -> SYMBOL LPAREN terms RPAREN
Rule 6     var -> VARIABLE
Rule 7     var -> VARIABLE COLON atype
Rule 8     simplevar -> VARIABLE
Rule 9     simplevar -> VARIABLE COLON SYMBOL
Rule 10    term -> appelem
Rule 11    term -> OLD appelem
Rule 12    term -> term DOT appelem
Rule 13    aterm -> appelem
Rule 14    aterm -> aterm DOT appelem
Rule 15    term -> var
Rule 16    term -> term PLUS term
Rule 17    term -> term MINUS term
Rule 18    term -> term TIMES term
Rule 19    term -> term DIV term
Rule 20    term -> term IF fmla ELSE term
Rule 21    terms -> <empty>
Rule 22    terms -> term
Rule 23    terms -> terms COMMA term
Rule 24    term -> LPAREN term RPAREN
Rule 25    vars -> var
Rule 26    vars -> vars COMMA var
Rule 27    simplevars -> simplevar
Rule 28    simplevars -> simplevars COMMA simplevar
Rule 29    app -> SYMBOL
Rule 30    app -> SYMBOL LPAREN terms RPAREN
Rule 31    app -> term infix term
Rule 32    apps -> app
Rule 33    apps -> apps COMMA app
Rule 34    atom -> SYMBOL
Rule 35    atom -> SYMBOL LPAREN terms RPAREN
Rule 36    atoms -> atom
Rule 37    atoms -> atoms COMMA atom
Rule 38    lit -> atom
Rule 39    lit -> SYMBOL EQ SYMBOL
Rule 40    lit -> SYMBOL TILDAEQ SYMBOL
Rule 41    lit -> TILDA lit
Rule 42    relop -> EQ
Rule 43    relop -> LE
Rule 44    relop -> LT
Rule 45    relop -> GE
Rule 46    relop -> GT
Rule 47    relop -> PTO
Rule 48    infix -> PLUS
Rule 49    infix -> MINUS
Rule 50    infix -> TIMES
Rule 51    infix -> DIV
Rule 52    fmla -> term
Rule 53    term -> term EQ term
Rule 54    term -> term LE term
Rule 55    term -> term LT term
Rule 56    term -> term GE term
Rule 57    term -> term GT term
Rule 58    term -> term PTO term
Rule 59    term -> term TILDAEQ term
Rule 60    term -> TRUE
Rule 61    term -> FALSE
Rule 62    term -> TILDA term
Rule 63    term -> term AND term
Rule 64    term -> term OR term
Rule 65    term -> term ARROW term
Rule 66    term -> term IFF term
Rule 67    term -> FORALL simplevars DOT term
Rule 68    term -> EXISTS simplevars DOT term
Rule 69    term -> FORALL LPAREN vars RPAREN term
Rule 70    term -> EXISTS LPAREN vars RPAREN term
Rule 71    term -> GLOBALLY term
Rule 72    term -> EVENTUALLY term
Rule 73    term -> LPAREN DOLLAR SYMBOL simplevars DOT fmla RPAREN LPAREN terms RPAREN
Rule 74    term -> DOLLAR SYMBOL DOT fmla
Rule 75    term -> term ISA atype

Terminals, with rules where they appear

ACTION               : 
AFTER                : 
ALIAS                : 
AND                  : 63
APPLY                : 
AROUND               : 
ARROW                : 65
ASSERT               : 
ASSIGN               : 
ASSUME               : 
ATTRIBUTE            : 
AUTOINSTANCE         : 
AXIOM                : 
BEFORE               : 
CALL                 : 
CARET                : 
COLON                : 7 9
COMMA                : 23 26 28 33 37
CONCEPT              : 
CONJECTURE           : 
DECREASES            : 
DEFINITION           : 
DELEGATE             : 
DERIVED              : 
DESTRUCTOR           : 
DIV                  : 19 51
DOLLAR               : 73 74
DOT                  : 2 12 14 67 68 73 74
DOTDOTDOT            : 
DOTS                 : 
ELSE                 : 20
ENSURE               : 
ENSURES              : 
ENTRY                : 
EQ                   : 39 42 53
EVENTUALLY           : 72
EXISTS               : 68 70
EXPORT               : 
EXTRACT              : 
FALSE                : 61
FORALL               : 67 69
FRESH                : 
FROM                 : 
FUNCTION             : 
GE                   : 45 56
GHOST                : 
GLOBALLY             : 71
GT                   : 46 57
IF                   : 20
IFF                  : 66
IMPLEMENT            : 
IMPLEMENTATION       : 
IMPORT               : 
IN                   : 
INCLUDE              : 
INDIV                : 
INIT                 : 
INSTANTIATE          : 
INTERPRET            : 
INVARIANT            : 
ISA                  : 75
ISOLATE              : 
LABEL                : 
LCB                  : 
LE                   : 43 54
LET                  : 
LOCAL                : 
LPAREN               : 5 24 30 35 69 70 73 73
LT                   : 44 55
MACRO                : 
MATCH                : 
MAXIMIZING           : 
MINIMIZING           : 
MINUS                : 17 49
MIXIN                : 
MIXORD               : 
MODIFIES             : 
MODULE               : 
NAMED                : 
NATIVEQUOTE          : 
NULL                 : 
OBJECT               : 
OF                   : 
OLD                  : 11
OR                   : 64
PARAMETER            : 
PARAMS               : 
PLUS                 : 16 48
PRIVATE              : 
PROGRESS             : 
PROOF                : 
PROPERTY             : 
PTO                  : 47 58
RCB                  : 
RELATION             : 
RELY                 : 
REQUIRE              : 
REQUIRES             : 
RETURNS              : 
RPAREN               : 5 24 30 35 69 70 73 73
SCENARIO             : 
SCHEMA               : 
SEMI                 : 
SET                  : 
SOME                 : 
SPECIFICATION        : 
STATE                : 
STRUCT               : 
SYMBOL               : 1 2 4 5 9 29 30 34 35 39 39 40 40 73 74
TEMPORAL             : 
THIS                 : 3
THUNK                : 
TILDA                : 41 62
TILDAEQ              : 40 59
TIMES                : 18 50
TRUE                 : 60
TRUSTED              : 
TYPE                 : 
UPDATE               : 
USING                : 
VAR                  : 
VARIABLE             : 6 7 8 9
VARIANT              : 
WHILE                : 
WITH                 : 
error                : 

Nonterminals, with rules where they appear

app                  : 32 33
appelem              : 10 11 12 13 14
apps                 : 33
aterm                : 14
atom                 : 36 37 38
atoms                : 37
atype                : 2 7 75
fmla                 : 20 73 74 0
infix                : 31
lit                  : 41
relop                : 
simplevar            : 27 28
simplevars           : 28 67 68 73
term                 : 12 16 16 17 17 18 18 19 19 20 20 22 23 24 31 31 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 62 63 63 64 64 65 65 66 66 67 68 69 70 71 72 75
terms                : 5 23 30 35 73
var                  : 15 25 26
vars                 : 26 69 70

Parsing method: LALR

state 0

    (0) S' -> . fmla
    (52) fmla -> . term
    (10) term -> . appelem
    (11) term -> . OLD appelem
    (12) term -> . term DOT appelem
    (15) term -> . var
    (16) term -> . term PLUS term
    (17) term -> . term MINUS term
    (18) term -> . term TIMES term
    (19) term -> . term DIV term
    (20) term -> . term IF fmla ELSE term
    (24) term -> . LPAREN term RPAREN
    (53) term -> . term EQ term
    (54) term -> . term LE term
    (55) term -> . term LT term
    (56) term -> . term GE term
    (57) term -> . term GT term
    (58) term -> . term PTO term
    (59) term -> . term TILDAEQ term
    (60) term -> . TRUE
    (61) term -> . FALSE
    (62) term -> . TILDA term
    (63) term -> . term AND term
    (64) term -> . term OR term
    (65) term -> . term ARROW term
    (66) term -> . term IFF term
    (67) term -> . FORALL simplevars DOT term
    (68) term -> . EXISTS simplevars DOT term
    (69) term -> . FORALL LPAREN vars RPAREN term
    (70) term -> . EXISTS LPAREN vars RPAREN term
    (71) term -> . GLOBALLY term
    (72) term -> . EVENTUALLY term
    (73) term -> . LPAREN DOLLAR SYMBOL simplevars DOT fmla RPAREN LPAREN terms RPAREN
    (74) term -> . DOLLAR SYMBOL DOT fmla
    (75) term -> . term ISA atype
    (4) appelem -> . SYMBOL
    (5) appelem -> . SYMBOL LPAREN terms RPAREN
    (6) var -> . VARIABLE
    (7) var -> . VARIABLE COLON atype

    OLD             shift and go to state 5
    LPAREN          shift and go to state 13
    TRUE            shift and go to state 3
    FALSE           shift and go to state 16
    TILDA           shift and go to state 6
    FORALL          shift and go to state 12
    EXISTS          shift and go to state 10
    GLOBALLY        shift and go to state 2
    EVENTUALLY      shift and go to state 9
    DOLLAR          shift and go to state 11
    SYMBOL          shift and go to state 1
    VARIABLE        shift and go to state 14

    term                           shift and go to state 15
    fmla                           shift and go to state 7
    var                            shift and go to state 8
    appelem                        shift and go to state 4

state 1

    (4) appelem -> SYMBOL .
    (5) appelem -> SYMBOL . LPAREN terms RPAREN

    DOT             reduce using rule 4 (appelem -> SYMBOL .)
    PLUS            reduce using rule 4 (appelem -> SYMBOL .)
    MINUS           reduce using rule 4 (appelem -> SYMBOL .)
    TIMES           reduce using rule 4 (appelem -> SYMBOL .)
    DIV             reduce using rule 4 (appelem -> SYMBOL .)
    IF              reduce using rule 4 (appelem -> SYMBOL .)
    EQ              reduce using rule 4 (appelem -> SYMBOL .)
    LE              reduce using rule 4 (appelem -> SYMBOL .)
    LT              reduce using rule 4 (appelem -> SYMBOL .)
    GE              reduce using rule 4 (appelem -> SYMBOL .)
    GT              reduce using rule 4 (appelem -> SYMBOL .)
    PTO             reduce using rule 4 (appelem -> SYMBOL .)
    TILDAEQ         reduce using rule 4 (appelem -> SYMBOL .)
    AND             reduce using rule 4 (appelem -> SYMBOL .)
    OR              reduce using rule 4 (appelem -> SYMBOL .)
    ARROW           reduce using rule 4 (appelem -> SYMBOL .)
    IFF             reduce using rule 4 (appelem -> SYMBOL .)
    ISA             reduce using rule 4 (appelem -> SYMBOL .)
    $end            reduce using rule 4 (appelem -> SYMBOL .)
    RPAREN          reduce using rule 4 (appelem -> SYMBOL .)
    COMMA           reduce using rule 4 (appelem -> SYMBOL .)
    ELSE            reduce using rule 4 (appelem -> SYMBOL .)
    LPAREN          shift and go to state 17


state 2

    (71) term -> GLOBALLY . term
    (10) term -> . appelem
    (11) term -> . OLD appelem
    (12) term -> . term DOT appelem
    (15) term -> . var
    (16) term -> . term PLUS term
    (17) term -> . term MINUS term
    (18) term -> . term TIMES term
    (19) term -> . term DIV term
    (20) term -> . term IF fmla ELSE term
    (24) term -> . LPAREN term RPAREN
    (53) term -> . term EQ term
    (54) term -> . term LE term
    (55) term -> . term LT term
    (56) term -> . term GE term
    (57) term -> . term GT term
    (58) term -> . term PTO term
    (59) term -> . term TILDAEQ term
    (60) term -> . TRUE
    (61) term -> . FALSE
    (62) term -> . TILDA term
    (63) term -> . term AND term
    (64) term -> . term OR term
    (65) term -> . term ARROW term
    (66) term -> . term IFF term
    (67) term -> . FORALL simplevars DOT term
    (68) term -> . EXISTS simplevars DOT term
    (69) term -> . FORALL LPAREN vars RPAREN term
    (70) term -> . EXISTS LPAREN vars RPAREN term
    (71) term -> . GLOBALLY term
    (72) term -> . EVENTUALLY term
    (73) term -> . LPAREN DOLLAR SYMBOL simplevars DOT fmla RPAREN LPAREN terms RPAREN
    (74) term -> . DOLLAR SYMBOL DOT fmla
    (75) term -> . term ISA atype
    (4) appelem -> . SYMBOL
    (5) appelem -> . SYMBOL LPAREN terms RPAREN
    (6) var -> . VARIABLE
    (7) var -> . VARIABLE COLON atype

    OLD             shift and go to state 5
    LPAREN          shift and go to state 13
    TRUE            shift and go to state 3
    FALSE           shift and go to state 16
    TILDA           shift and go to state 6
    FORALL          shift and go to state 12
    EXISTS          shift and go to state 10
    GLOBALLY        shift and go to state 2
    EVENTUALLY      shift and go to state 9
    DOLLAR          shift and go to state 11
    SYMBOL          shift and go to state 1
    VARIABLE        shift and go to state 14

    term                           shift and go to state 18
    var                            shift and go to state 8
    appelem                        shift and go to state 4

state 3

    (60) term -> TRUE .

    DOT             reduce using rule 60 (term -> TRUE .)
    PLUS            reduce using rule 60 (term -> TRUE .)
    MINUS           reduce using rule 60 (term -> TRUE .)
    TIMES           reduce using rule 60 (term -> TRUE .)
    DIV             reduce using rule 60 (term -> TRUE .)
    IF              reduce using rule 60 (term -> TRUE .)
    EQ              reduce using rule 60 (term -> TRUE .)
    LE              reduce using rule 60 (term -> TRUE .)
    LT              reduce using rule 60 (term -> TRUE .)
    GE              reduce using rule 60 (term -> TRUE .)
    GT              reduce using rule 60 (term -> TRUE .)
    PTO             reduce using rule 60 (term -> TRUE .)
    TILDAEQ         reduce using rule 60 (term -> TRUE .)
    AND             reduce using rule 60 (term -> TRUE .)
    OR              reduce using rule 60 (term -> TRUE .)
    ARROW           reduce using rule 60 (term -> TRUE .)
    IFF             reduce using rule 60 (term -> TRUE .)
    ISA             reduce using rule 60 (term -> TRUE .)
    $end            reduce using rule 60 (term -> TRUE .)
    RPAREN          reduce using rule 60 (term -> TRUE .)
    COMMA           reduce using rule 60 (term -> TRUE .)
    ELSE            reduce using rule 60 (term -> TRUE .)


state 4

    (10) term -> appelem .

    DOT             reduce using rule 10 (term -> appelem .)
    PLUS            reduce using rule 10 (term -> appelem .)
    MINUS           reduce using rule 10 (term -> appelem .)
    TIMES           reduce using rule 10 (term -> appelem .)
    DIV             reduce using rule 10 (term -> appelem .)
    IF              reduce using rule 10 (term -> appelem .)
    EQ              reduce using rule 10 (term -> appelem .)
    LE              reduce using rule 10 (term -> appelem .)
    LT              reduce using rule 10 (term -> appelem .)
    GE              reduce using rule 10 (term -> appelem .)
    GT              reduce using rule 10 (term -> appelem .)
    PTO             reduce using rule 10 (term -> appelem .)
    TILDAEQ         reduce using rule 10 (term -> appelem .)
    AND             reduce using rule 10 (term -> appelem .)
    OR              reduce using rule 10 (term -> appelem .)
    ARROW           reduce using rule 10 (term -> appelem .)
    IFF             reduce using rule 10 (term -> appelem .)
    ISA             reduce using rule 10 (term -> appelem .)
    $end            reduce using rule 10 (term -> appelem .)
    RPAREN          reduce using rule 10 (term -> appelem .)
    COMMA           reduce using rule 10 (term -> appelem .)
    ELSE            reduce using rule 10 (term -> appelem .)


state 5

    (11) term -> OLD . appelem
    (4) appelem -> . SYMBOL
    (5) appelem -> . SYMBOL LPAREN terms RPAREN

    SYMBOL          shift and go to state 1

    appelem                        shift and go to state 19

state 6

    (62) term -> TILDA . term
    (10) term -> . appelem
    (11) term -> . OLD appelem
    (12) term -> . term DOT appelem
    (15) term -> . var
    (16) term -> . term PLUS term
    (17) term -> . term MINUS term
    (18) term -> . term TIMES term
    (19) term -> . term DIV term
    (20) term -> . term IF fmla ELSE term
    (24) term -> . LPAREN term RPAREN
    (53) term -> . term EQ term
    (54) term -> . term LE term
    (55) term -> . term LT term
    (56) term -> . term GE term
    (57) term -> . term GT term
    (58) term -> . term PTO term
    (59) term -> . term TILDAEQ term
    (60) term -> . TRUE
    (61) term -> . FALSE
    (62) term -> . TILDA term
    (63) term -> . term AND term
    (64) term -> . term OR term
    (65) term -> . term ARROW term
    (66) term -> . term IFF term
    (67) term -> . FORALL simplevars DOT term
    (68) term -> . EXISTS simplevars DOT term
    (69) term -> . FORALL LPAREN vars RPAREN term
    (70) term -> . EXISTS LPAREN vars RPAREN term
    (71) term -> . GLOBALLY term
    (72) term -> . EVENTUALLY term
    (73) term -> . LPAREN DOLLAR SYMBOL simplevars DOT fmla RPAREN LPAREN terms RPAREN
    (74) term -> . DOLLAR SYMBOL DOT fmla
    (75) term -> . term ISA atype
    (4) appelem -> . SYMBOL
    (5) appelem -> . SYMBOL LPAREN terms RPAREN
    (6) var -> . VARIABLE
    (7) var -> . VARIABLE COLON atype

    OLD             shift and go to state 5
    LPAREN          shift and go to state 13
    TRUE            shift and go to state 3
    FALSE           shift and go to state 16
    TILDA           shift and go to state 6
    FORALL          shift and go to state 12
    EXISTS          shift and go to state 10
    GLOBALLY        shift and go to state 2
    EVENTUALLY      shift and go to state 9
    DOLLAR          shift and go to state 11
    SYMBOL          shift and go to state 1
    VARIABLE        shift and go to state 14

    term                           shift and go to state 20
    var                            shift and go to state 8
    appelem                        shift and go to state 4

state 7

    (0) S' -> fmla .



state 8

    (15) term -> var .

    DOT             reduce using rule 15 (term -> var .)
    PLUS            reduce using rule 15 (term -> var .)
    MINUS           reduce using rule 15 (term -> var .)
    TIMES           reduce using rule 15 (term -> var .)
    DIV             reduce using rule 15 (term -> var .)
    IF              reduce using rule 15 (term -> var .)
    EQ              reduce using rule 15 (term -> var .)
    LE              reduce using rule 15 (term -> var .)
    LT              reduce using rule 15 (term -> var .)
    GE              reduce using rule 15 (term -> var .)
    GT              reduce using rule 15 (term -> var .)
    PTO             reduce using rule 15 (term -> var .)
    TILDAEQ         reduce using rule 15 (term -> var .)
    AND             reduce using rule 15 (term -> var .)
    OR              reduce using rule 15 (term -> var .)
    ARROW           reduce using rule 15 (term -> var .)
    IFF             reduce using rule 15 (term -> var .)
    ISA             reduce using rule 15 (term -> var .)
    $end            reduce using rule 15 (term -> var .)
    RPAREN          reduce using rule 15 (term -> var .)
    COMMA           reduce using rule 15 (term -> var .)
    ELSE            reduce using rule 15 (term -> var .)


state 9

    (72) term -> EVENTUALLY . term
    (10) term -> . appelem
    (11) term -> . OLD appelem
    (12) term -> . term DOT appelem
    (15) term -> . var
    (16) term -> . term PLUS term
    (17) term -> . term MINUS term
    (18) term -> . term TIMES term
    (19) term -> . term DIV term
    (20) term -> . term IF fmla ELSE term
    (24) term -> . LPAREN term RPAREN
    (53) term -> . term EQ term
    (54) term -> . term LE term
    (55) term -> . term LT term
    (56) term -> . term GE term
    (57) term -> . term GT term
    (58) term -> . term PTO term
    (59) term -> . term TILDAEQ term
    (60) term -> . TRUE
    (61) term -> . FALSE
    (62) term -> . TILDA term
    (63) term -> . term AND term
    (64) term -> . term OR term
    (65) term -> . term ARROW term
    (66) term -> . term IFF term
    (67) term -> . FORALL simplevars DOT term
    (68) term -> . EXISTS simplevars DOT term
    (69) term -> . FORALL LPAREN vars RPAREN term
    (70) term -> . EXISTS LPAREN vars RPAREN term
    (71) term -> . GLOBALLY term
    (72) term -> . EVENTUALLY term
    (73) term -> . LPAREN DOLLAR SYMBOL simplevars DOT fmla RPAREN LPAREN terms RPAREN
    (74) term -> . DOLLAR SYMBOL DOT fmla
    (75) term -> . term ISA atype
    (4) appelem -> . SYMBOL
    (5) appelem -> . SYMBOL LPAREN terms RPAREN
    (6) var -> . VARIABLE
    (7) var -> . VARIABLE COLON atype

    OLD             shift and go to state 5
    LPAREN          shift and go to state 13
    TRUE            shift and go to state 3
    FALSE           shift and go to state 16
    TILDA           shift and go to state 6
    FORALL          shift and go to state 12
    EXISTS          shift and go to state 10
    GLOBALLY        shift and go to state 2
    EVENTUALLY      shift and go to state 9
    DOLLAR          shift and go to state 11
    SYMBOL          shift and go to state 1
    VARIABLE        shift and go to state 14

    term                           shift and go to state 21
    var                            shift and go to state 8
    appelem                        shift and go to state 4

state 10

    (68) term -> EXISTS . simplevars DOT term
    (70) term -> EXISTS . LPAREN vars RPAREN term
    (27) simplevars -> . simplevar
    (28) simplevars -> . simplevars COMMA simplevar
    (8) simplevar -> . VARIABLE
    (9) simplevar -> . VARIABLE COLON SYMBOL

    LPAREN          shift and go to state 23
    VARIABLE        shift and go to state 24

    simplevar                      shift and go to state 25
    simplevars                     shift and go to state 22

state 11

    (74) term -> DOLLAR . SYMBOL DOT fmla

    SYMBOL          shift and go to state 26


state 12

    (67) term -> FORALL . simplevars DOT term
    (69) term -> FORALL . LPAREN vars RPAREN term
    (27) simplevars -> . simplevar
    (28) simplevars -> . simplevars COMMA simplevar
    (8) simplevar -> . VARIABLE
    (9) simplevar -> . VARIABLE COLON SYMBOL

    LPAREN          shift and go to state 28
    VARIABLE        shift and go to state 24

    simplevar                      shift and go to state 25
    simplevars                     shift and go to state 27

state 13

    (24) term -> LPAREN . term RPAREN
    (73) term -> LPAREN . DOLLAR SYMBOL simplevars DOT fmla RPAREN LPAREN terms RPAREN
    (10) term -> . appelem
    (11) term -> . OLD appelem
    (12) term -> . term DOT appelem
    (15) term -> . var
    (16) term -> . term PLUS term
    (17) term -> . term MINUS term
    (18) term -> . term TIMES term
    (19) term -> . term DIV term
    (20) term -> . term IF fmla ELSE term
    (24) term -> . LPAREN term RPAREN
    (53) term -> . term EQ term
    (54) term -> . term LE term
    (55) term -> . term LT term
    (56) term -> . term GE term
    (57) term -> . term GT term
    (58) term -> . term PTO term
    (59) term -> . term TILDAEQ term
    (60) term -> . TRUE
    (61) term -> . FALSE
    (62) term -> . TILDA term
    (63) term -> . term AND term
    (64) term -> . term OR term
    (65) term -> . term ARROW term
    (66) term -> . term IFF term
    (67) term -> . FORALL simplevars DOT term
    (68) term -> . EXISTS simplevars DOT term
    (69) term -> . FORALL LPAREN vars RPAREN term
    (70) term -> . EXISTS LPAREN vars RPAREN term
    (71) term -> . GLOBALLY term
    (72) term -> . EVENTUALLY term
    (73) term -> . LPAREN DOLLAR SYMBOL simplevars DOT fmla RPAREN LPAREN terms RPAREN
    (74) term -> . DOLLAR SYMBOL DOT fmla
    (75) term -> . term ISA atype
    (4) appelem -> . SYMBOL
    (5) appelem -> . SYMBOL LPAREN terms RPAREN
    (6) var -> . VARIABLE
    (7) var -> . VARIABLE COLON atype

    DOLLAR          shift and go to state 29
    OLD             shift and go to state 5
    LPAREN          shift and go to state 13
    TRUE            shift and go to state 3
    FALSE           shift and go to state 16
    TILDA           shift and go to state 6
    FORALL          shift and go to state 12
    EXISTS          shift and go to state 10
    GLOBALLY        shift and go to state 2
    EVENTUALLY      shift and go to state 9
    SYMBOL          shift and go to state 1
    VARIABLE        shift and go to state 14

    term                           shift and go to state 30
    var                            shift and go to state 8
    appelem                        shift and go to state 4

state 14

    (6) var -> VARIABLE .
    (7) var -> VARIABLE . COLON atype

    DOT             reduce using rule 6 (var -> VARIABLE .)
    PLUS            reduce using rule 6 (var -> VARIABLE .)
    MINUS           reduce using rule 6 (var -> VARIABLE .)
    TIMES           reduce using rule 6 (var -> VARIABLE .)
    DIV             reduce using rule 6 (var -> VARIABLE .)
    IF              reduce using rule 6 (var -> VARIABLE .)
    EQ              reduce using rule 6 (var -> VARIABLE .)
    LE              reduce using rule 6 (var -> VARIABLE .)
    LT              reduce using rule 6 (var -> VARIABLE .)
    GE              reduce using rule 6 (var -> VARIABLE .)
    GT              reduce using rule 6 (var -> VARIABLE .)
    PTO             reduce using rule 6 (var -> VARIABLE .)
    TILDAEQ         reduce using rule 6 (var -> VARIABLE .)
    AND             reduce using rule 6 (var -> VARIABLE .)
    OR              reduce using rule 6 (var -> VARIABLE .)
    ARROW           reduce using rule 6 (var -> VARIABLE .)
    IFF             reduce using rule 6 (var -> VARIABLE .)
    ISA             reduce using rule 6 (var -> VARIABLE .)
    $end            reduce using rule 6 (var -> VARIABLE .)
    RPAREN          reduce using rule 6 (var -> VARIABLE .)
    COMMA           reduce using rule 6 (var -> VARIABLE .)
    ELSE            reduce using rule 6 (var -> VARIABLE .)
    COLON           shift and go to state 31


state 15

    (52) fmla -> term .
    (12) term -> term . DOT appelem
    (16) term -> term . PLUS term
    (17) term -> term . MINUS term
    (18) term -> term . TIMES term
    (19) term -> term . DIV term
    (20) term -> term . IF fmla ELSE term
    (53) term -> term . EQ term
    (54) term -> term . LE term
    (55) term -> term . LT term
    (56) term -> term . GE term
    (57) term -> term . GT term
    (58) term -> term . PTO term
    (59) term -> term . TILDAEQ term
    (63) term -> term . AND term
    (64) term -> term . OR term
    (65) term -> term . ARROW term
    (66) term -> term . IFF term
    (75) term -> term . ISA atype

  ! shift/reduce conflict for DOT resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for PTO resolved as shift
  ! shift/reduce conflict for TILDAEQ resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for ARROW resolved as shift
  ! shift/reduce conflict for IFF resolved as shift
  ! shift/reduce conflict for ISA resolved as shift
    ELSE            reduce using rule 52 (fmla -> term .)
    $end            reduce using rule 52 (fmla -> term .)
    RPAREN          reduce using rule 52 (fmla -> term .)
    COMMA           reduce using rule 52 (fmla -> term .)
    DOT             shift and go to state 35
    PLUS            shift and go to state 40
    MINUS           shift and go to state 38
    TIMES           shift and go to state 45
    DIV             shift and go to state 34
    IF              shift and go to state 47
    EQ              shift and go to state 46
    LE              shift and go to state 37
    LT              shift and go to state 39
    GE              shift and go to state 42
    GT              shift and go to state 41
    PTO             shift and go to state 36
    TILDAEQ         shift and go to state 43
    AND             shift and go to state 48
    OR              shift and go to state 49
    ARROW           shift and go to state 44
    IFF             shift and go to state 32
    ISA             shift and go to state 33

  ! DOT             [ reduce using rule 52 (fmla -> term .) ]
  ! PLUS            [ reduce using rule 52 (fmla -> term .) ]
  ! MINUS           [ reduce using rule 52 (fmla -> term .) ]
  ! TIMES           [ reduce using rule 52 (fmla -> term .) ]
  ! DIV             [ reduce using rule 52 (fmla -> term .) ]
  ! IF              [ reduce using rule 52 (fmla -> term .) ]
  ! EQ              [ reduce using rule 52 (fmla -> term .) ]
  ! LE              [ reduce using rule 52 (fmla -> term .) ]
  ! LT              [ reduce using rule 52 (fmla -> term .) ]
  ! GE              [ reduce using rule 52 (fmla -> term .) ]
  ! GT              [ reduce using rule 52 (fmla -> term .) ]
  ! PTO             [ reduce using rule 52 (fmla -> term .) ]
  ! TILDAEQ         [ reduce using rule 52 (fmla -> term .) ]
  ! AND             [ reduce using rule 52 (fmla -> term .) ]
  ! OR              [ reduce using rule 52 (fmla -> term .) ]
  ! ARROW           [ reduce using rule 52 (fmla -> term .) ]
  ! IFF             [ reduce using rule 52 (fmla -> term .) ]
  ! ISA             [ reduce using rule 52 (fmla -> term .) ]


state 16

    (61) term -> FALSE .

    DOT             reduce using rule 61 (term -> FALSE .)
    PLUS            reduce using rule 61 (term -> FALSE .)
    MINUS           reduce using rule 61 (term -> FALSE .)
    TIMES           reduce using rule 61 (term -> FALSE .)
    DIV             reduce using rule 61 (term -> FALSE .)
    IF              reduce using rule 61 (term -> FALSE .)
    EQ              reduce using rule 61 (term -> FALSE .)
    LE              reduce using rule 61 (term -> FALSE .)
    LT              reduce using rule 61 (term -> FALSE .)
    GE              reduce using rule 61 (term -> FALSE .)
    GT              reduce using rule 61 (term -> FALSE .)
    PTO             reduce using rule 61 (term -> FALSE .)
    TILDAEQ         reduce using rule 61 (term -> FALSE .)
    AND             reduce using rule 61 (term -> FALSE .)
    OR              reduce using rule 61 (term -> FALSE .)
    ARROW           reduce using rule 61 (term -> FALSE .)
    IFF             reduce using rule 61 (term -> FALSE .)
    ISA             reduce using rule 61 (term -> FALSE .)
    $end            reduce using rule 61 (term -> FALSE .)
    RPAREN          reduce using rule 61 (term -> FALSE .)
    COMMA           reduce using rule 61 (term -> FALSE .)
    ELSE            reduce using rule 61 (term -> FALSE .)


state 17

    (5) appelem -> SYMBOL LPAREN . terms RPAREN
    (21) terms -> .
    (22) terms -> . term
    (23) terms -> . terms COMMA term
    (10) term -> . appelem
    (11) term -> . OLD appelem
    (12) term -> . term DOT appelem
    (15) term -> . var
    (16) term -> . term PLUS term
    (17) term -> . term MINUS term
    (18) term -> . term TIMES term
    (19) term -> . term DIV term
    (20) term -> . term IF fmla ELSE term
    (24) term -> . LPAREN term RPAREN
    (53) term -> . term EQ term
    (54) term -> . term LE term
    (55) term -> . term LT term
    (56) term -> . term GE term
    (57) term -> . term GT term
    (58) term -> . term PTO term
    (59) term -> . term TILDAEQ term
    (60) term -> . TRUE
    (61) term -> . FALSE
    (62) term -> . TILDA term
    (63) term -> . term AND term
    (64) term -> . term OR term
    (65) term -> . term ARROW term
    (66) term -> . term IFF term
    (67) term -> . FORALL simplevars DOT term
    (68) term -> . EXISTS simplevars DOT term
    (69) term -> . FORALL LPAREN vars RPAREN term
    (70) term -> . EXISTS LPAREN vars RPAREN term
    (71) term -> . GLOBALLY term
    (72) term -> . EVENTUALLY term
    (73) term -> . LPAREN DOLLAR SYMBOL simplevars DOT fmla RPAREN LPAREN terms RPAREN
    (74) term -> . DOLLAR SYMBOL DOT fmla
    (75) term -> . term ISA atype
    (4) appelem -> . SYMBOL
    (5) appelem -> . SYMBOL LPAREN terms RPAREN
    (6) var -> . VARIABLE
    (7) var -> . VARIABLE COLON atype

    RPAREN          reduce using rule 21 (terms -> .)
    COMMA           reduce using rule 21 (terms -> .)
    OLD             shift and go to state 5
    LPAREN          shift and go to state 13
    TRUE            shift and go to state 3
    FALSE           shift and go to state 16
    TILDA           shift and go to state 6
    FORALL          shift and go to state 12
    EXISTS          shift and go to state 10
    GLOBALLY        shift and go to state 2
    EVENTUALLY      shift and go to state 9
    DOLLAR          shift and go to state 11
    SYMBOL          shift and go to state 1
    VARIABLE        shift and go to state 14
